--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -14,20 +14,22 @@
     <table id="bitcoins" class="table table-striped table-hover">
         <thead>
             <tr>
-                <th scope="col">id</th>
-                <th scope="col">email</th>
-                <th scope="col">first_name</th>
-                <th scope="col">last_name</th>
-                <th scope="col">avatar</th>
+                <th scope="col">Short</th>
+                <th scope="col">Coin</th>
+                <th scope="col">Price</th>
+                <th scope="col">Market Cap</th>
+                <th scope="col">%24H</th>
+                <th scope="col">More Info</th>
             </tr>
         </thead>
         <tfoot>
             <tr>
-                <th scope="col">id</th>
-                <th scope="col">email</th>
-                <th scope="col">first_name</th>
-                <th scope="col">last_name</th>
-                <th scope="col">avatar</th>
+                <th scope="col">Short</th>
+                <th scope="col">Coin</th>
+                <th scope="col">Price</th>
+                <th scope="col">Market Cap</th>
+                <th scope="col">%24H</th>
+                <th scope="col">More Info</th>
             </tr>
         </tfoot>
     </table>
