--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -10,6 +10,13 @@
             <li class="nav-item">
                 <a class="nav-link" href="/Portfolio">Wallet</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">login</a>
+            </li>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/register">register</a>
+            </li>
         </ul>
     </div>
 </nav>
