--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,8 +60,9 @@
                 </div>
                 <div class="modal-footer">
                     <form method="POST" action="/">
-                        <input type="hidden" name="favorite-id" id="favorite-id">
-                        <button id="add-to-favorites" type="button" class="btn btn-primary">Add to favorites</button>
+                        <input type="hidden" name="id" id="favorite-id">
+                        <input type="hidden" name="coin" id="favorite-coin">
+                        <button id="add-to-favorites" type="submit" class="btn btn-primary">Add to cryptowallet</button>
                     </form>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
