--- a/views/components/scripts.ejs
+++ b/views/components/scripts.ejs
@@ -6,4 +6,5 @@
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.21/b-1.6.3/r-2.2.5/datatables.min.js">
 </script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script src="javascripts/table.js"></script>
+<script src="javascripts/index.js"></script>
+<script src="javascripts/favorites.js"></script>
