--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-auto">
-                <table id="bitcoins" class="table table-striped table-bordered dt-responsive nowrap table-hover"
+                <table id="favorites" class="table table-striped table-bordered dt-responsive nowrap table-hover"
                     style="width: max-content;">
                     <thead>
                         <tr>
