--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,21 +14,16 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-auto">
-                <form method="POST" action="/register">
+                <form role="form" method="POST" action="/register">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            placeholder="Enter email">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small>
+                        <label for="input-username">username</label>
+                        <input type="text" class="form-control" name="username" id="username-id"
+                            aria-describedby="username" placeholder="Enter username">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                    </div>
-                    <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <label for="input-password">Password</label>
+                        <input type="password" name="password" class="form-control" id="password-id"
+                            placeholder="Password">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
